<resources>
    <string name="app_name">Trending</string>
    <string name="sort_by_star">Sort by star</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal</string>
 </resources>